--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.1",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
+    "tooltip.js": "^1.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
